--- a/Christmas/contact.html
+++ b/Christmas/contact.html
@@ -54,9 +54,9 @@
             </div>
             <div class="row" style='position:relative;' id='small-row' style='height:15px;'>
                 <div class="col-sm-12 text-center top-links sh-links">
-                    <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
-                    <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
-                    <!--<a href="sms:+null" class="fa fa-comment hvr-shrink" id='phone'></a>-->
+                    <a href="#" class="fa fa-facebook hvr-shrink"></a>
+                    <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
+                    <a href="sms:+14355037540" class="fa fa-comment hvr-shrink" id='phone'></a>
                     <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
 
                 </div>
@@ -87,8 +87,9 @@
                 <div class="col-sm-4">
                     <a href='./home.html'><img class='hvr-grow logo-bg' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                     <div class="col-sm-12 top-links bh-links">
-                        <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
-                        <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
+                        <a href="#" class="fa fa-facebook hvr-shrink"></a>
+                        <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
+                        <a href="tel:4066335122" class="fa fa-phone hvr-shrink" id='phone'></a>
                         <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
                     </div>
                 </div>
@@ -178,6 +179,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <br>
+                    <a href="#" style='text-decoration:none;color:white;'><span class="fa fa-phone hvr-shrink"> <span class='good-text'>(435) 503-7540</span></span></a>
                     <a href='mailto:info@abbottartistry.com' style='text-decoration:none;color:white'><span class="fa fa-envelope-o hvr-shrink">  <span class='good-text'>info@abbottartistry.com</span></span></a>
                 </div>
             </div>
