--- a/Christmas/gallery.html
+++ b/Christmas/gallery.html
@@ -48,9 +48,9 @@
                 </div>
                 <div class="row" style='position:relative;' id='small-row' style='height:15px;'>
                     <div class="col-sm-12 text-center top-links sh-links">
-                        <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
-                        <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
-                        <!--<a href="sms:+null" class="fa fa-comment hvr-shrink" id='phone'></a>-->
+                        <a href="#" class="fa fa-facebook hvr-shrink"></a>
+                        <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
+                        <a href="sms:+14355037540" class="fa fa-comment hvr-shrink" id='phone'></a>
                         <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
     
                     </div>
@@ -70,6 +70,11 @@
                 </div> -->
             </div>
             <div class="header" id='big-header'>
+                <div class="row" style='background-image:url("./image-assets/snow.jpeg");position:relative;top:-25px;color:white;font-size:25px;'>
+                    <div class="col-sm-12 good-text hvr-glow">
+                        <em><strong>FREE shipping on all orders! Now through December 24th</strong></em>
+                    </div>
+                </div>
                 <div class="row" id='big-row'>
                     <div class="col-sm-1"></div>
                     <div class="col-sm-1 text-center">
@@ -81,8 +86,9 @@
                     <div class="col-sm-4">
                         <a href='./home.html'><img class='hvr-grow logo-bg' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                         <div class="col-sm-12 top-links bh-links">
-                            <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
-                            <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
+                            <a href="#" class="fa fa-facebook hvr-shrink"></a>
+                            <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
+                            <a href="tel:4066335122" class="fa fa-phone hvr-shrink" id='phone'></a>
                             <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
                         </div>
                     </div>
@@ -180,6 +186,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <br>
+                    <a href="#" style='text-decoration:none;color:white;'><span class="fa fa-comment hvr-shrink"> <span class='good-text'>(435) 503-7540</span></span></a>
                     <a href='mailto:info@abbottartistry.com' style='text-decoration:none;color:white'><span class="fa fa-envelope-o hvr-shrink">  <span class='good-text'>info@abbottartistry.com</span></span></a>
                 </div>
             </div>
