--- a/Christmas/home.html
+++ b/Christmas/home.html
@@ -27,7 +27,13 @@
 <body>
     <div class="overflow" style='overflow-x:hidden;'>
         <div class="header-small" style='height:auto;' id='small-header'>
+            <div class="row" id='banner' style='background-image:url("./image-assets/snow.jpeg");position:relative;top:-25px;color:white;font-size:25px;'>
+                <div class="col-sm-12 good-text hvr-glow text-center">
+                    <em><strong>FREE shipping on all orders! Now through December 24th</strong></em>
+                </div>
+            </div>
             <div class="row" id='small-row-menu' style='height:30px;'>
+                
             <!-- <div class="row">
                 <div class="col-sm-12 text-center">
                     <i class="fa fa-bars fa-3x" aria-hidden="true"></i>
@@ -35,7 +41,7 @@
             </div> -->
                   <!-- Dropdown Trigger -->
                 <div class="col-sm-12 text-right">
-                    <a class='dropdown-trigger btn' href='#' data-target='dropdown1' style='color:black;background-color:rgb(252, 252, 239);'><i class="fa fa-bars" aria-hidden="true" style='position:relative;bottom:50%;'></i></a>
+                    <a class='dropdown-trigger btn' href='#' data-target='dropdown1' style='color:black;background-color:rgb(252, 252, 239);position:relative;top:-100%;'><i class="fa fa-bars" aria-hidden="true" style='position:relative;bottom:50%;'></i></a>
 
                     <!-- Dropdown Structure -->
                     <ul id='dropdown1' class='dropdown-content' style='color:black;'>
@@ -50,16 +56,16 @@
                     </ul>
                 </div>
             </div>
-            <div class="row" id='small-row-logo' style='height:45px;'>
+            <div class="row" id='small-row-logo' style='height:45px;position:relative;top:-40px;'>
                 <div class="col-sm-12 text-center">
                     <a href='./home.html'><img class='hvr-grow logo-sm' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                 </div>
             </div>
             <div class="row" style='position:relative;' id='small-row' style='height:15px;'>
                 <div class="col-sm-12 text-center top-links sh-links">
-                    <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
-                    <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
-                    <!--<a href="sms:+null" class="fa fa-comment hvr-shrink" id='phone'></a>-->
+                    <a href="#" class="fa fa-facebook hvr-shrink"></a>
+                    <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
+                    <a href="sms:+14355037540" class="fa fa-comment hvr-shrink" id='phone'></a>
                     <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
 
                 </div>
@@ -78,8 +84,13 @@
                 <div class="col-sm-4"></div>
             </div> -->
         </div>
-        <div class="header" id='big-header'>
-            <div class="row" id='big-row'>
+        <div class="row text-center" id='banner' style='background-image:url("./image-assets/snow.jpeg");position:relative;top:0px;color:white;font-size:25px;z-index:99999;'>
+            <div class="col-sm-12 good-text hvr-glow">
+                <em><strong>FREE shipping on all orders! Now through December 24th</strong></em>
+            </div>
+        </div>
+        <div class="header" id='big-header' style='top:0px;'>
+            <div class="row" id='big-row' style='position:relative;top:10px;'>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-1 text-center">
                     <a href='./home.html' class='link hvr-bob' id='home-link'>Home</a>
@@ -90,8 +101,9 @@
                 <div class="col-sm-4">
                     <a href='./home.html'><img class='hvr-grow logo-bg' id='main-logo' src='./image-assets/abbott-artistry-logo-finished.png'></a>
                     <div class="col-sm-12 top-links bh-links">
-                        <a href="https://www.facebook.com/abbottartistrymacrame/" target="_blank" class="fa fa-facebook hvr-shrink"></a>
-                        <a href="https://www.instagram.com/abbottartistry/" target="_blank" class="fa fa-instagram hvr-shrink"></a>
+                        <a href="#" class="fa fa-facebook hvr-shrink"></a>
+                        <a href="https://www.instagram.com/abbottartistry/" class="fa fa-instagram hvr-shrink"></a>
+                        <a href="tel:4066335122" class="fa fa-phone hvr-shrink" id='phone'></a>
                         <a href="mailto:info@abbottartistry.com" class="fa fa-envelope-o hvr-shrink"></a>
                     </div>
                 </div>
@@ -152,12 +164,12 @@
                     <div id="big-social">
                         <a href='https://etsy.com/shop/abbottartistry' target='_blank'><i class='fa fa-shopping-bag fa-lg' style='float:left;color:rgb(230, 150, 3);margin-right:5%;margin-left:15%;'> Etsy Shop</i></a>
                         <a href='https://www.instagram.com/abbottartistry/' target='_blank'><i class='fa fa-instagram fa-lg' style='float:left;color:rgb(255, 40, 97);margin-right:5%;'> Instagram</i></a>
-                        <a href='https://www.facebook.com/abbottartistrymacrame' target='_blank'><i class='fa fa-facebook fa-lg' style='float:left;color:blue;'> Facebook</i></a>
+                        <a href='https://www.facebook.com/lizzylou.abbott' target='_blank'><i class='fa fa-facebook fa-lg' style='float:left;color:blue;'> Facebook</i></a>
                     </div>
                     <div id="small-social">
                         <a href='https://etsy.com/shop/abbottartistry' target='_blank'><i class='fa fa-shopping-bag fa-lg' style='float:left;color:rgb(230, 150, 3);margin-right:5%;'> Etsy Shop</i></a>
                         <a href='https://www.instagram.com/abbottartistry/' target='_blank'><i class='fa fa-instagram fa-lg' style='float:left;color:rgb(255, 40, 97);margin-right:5%;'> Instagram</i></a>
-                        <a href='https://www.facebook.com/abbottartistrymacrame' target='_blank'><i class='fa fa-facebook fa-lg' style='float:left;color:blue;'> Facebook</i></a>
+                        <a href='https://www.facebook.com/lizzylou.abbott' target='_blank'><i class='fa fa-facebook fa-lg' style='float:left;color:blue;'> Facebook</i></a>
                     </div>
                     <div id="stacked-social">
                         <a href='https://etsy.com/shop/abbottartistry' target='_blank'><i class='fa fa-shopping-bag fa-lg' style='float:left;color:rgb(230, 150, 3);'> Etsy Shop</i></a>
@@ -166,7 +178,7 @@
                         <a href='https://www.instagram.com/abbottartistry/' target='_blank'><i class='fa fa-instagram fa-lg' style='margin-top:5%;color:rgb(255, 40, 97);'> Instagram</i></a>
                         <br>
                         <br>
-                        <a href='https://www.facebook.com/abbottartistrymacrame' target='_blank'><i class='fa fa-facebook fa-lg' style='float:left;color:blue;'> Facebook</i></a>
+                        <a href='https://www.facebook.com/lizzylou.abbott' target='_blank'><i class='fa fa-facebook fa-lg' style='float:left;color:blue;'> Facebook</i></a>
                     </div>
                 </div>
             </div>
@@ -381,6 +393,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center">
                     <br>
+                    <a href="" style='text-decoration:none;color:white;'><span class="fa fa-comment hvr-shrink"> <span class='good-text'>(435) 503-7540</span></span></a>
                     <a href='mailto:info@abbottartistry.com.com' style='text-decoration:none;color:white'><span class="fa fa-envelope-o hvr-shrink">  <span class='good-text'>info@abbottartistry.com</span></span></a>
                 </div>
             </div>
@@ -392,6 +405,9 @@
                 </div>
             </div>
         </div>
+        <!--<div class="banner">
+            Hello
+        </div>-->
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
@@ -467,9 +483,9 @@
         <script>
             document.onscroll = function() {scrollHeader()};
             function scrollHeader() {
-                if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100)
+                if (document.body.scrollTop > 40 || document.documentElement.scrollTop > 40)
                 {
-                    document.getElementById('big-row').style.height='25px';
+                    document.getElementById('big-row').style.height='60px';
                     document.getElementById('small-row').style.height='15px';
                     document.getElementById('small-row-logo').style.height='25px';
                     document.getElementById('small-row-menu').style.height='1px';
@@ -480,11 +496,11 @@
                 } else
                 {
                     document.getElementById('big-row').style.height='90px';
-                    document.getElementById('small-row').style.height='25px';
+                    document.getElementById('small-row').style.height='15px';
                     document.getElementById('small-row-logo').style.height='45px';
                     document.getElementById('small-row-menu').style.height='30px';
                     document.querySelector('.bh-links').style.display = 'block';
-                    document.querySelector('.logo-bg').style.width='75%';
+                    document.querySelector('.logo-bg').style.width='65%';
                     document.getElementById('big-header').classList.remove('header-border')
                     document.getElementById('small-header').classList.remove('header-border')
                     
